Revision history for Redis

{{$NEXT}}

1.967     2013-12-28 22:58:55 Europe/Paris
    * use new IO::Socket::Timeout with different API

1.966     2013-12-17 13:58:33 Europe/Amsterdam
    * fix tests for Redis 2.8

1.965     2013-11-29 09:28:36 Europe/Amsterdam

    * fix #60: TEST_REQUIRES needs newer MakeMaker
    * fix #34: perl-redis doesn't receive subcribed message if server restart 
    * fix #38: select new database doesn't survive after reconnect
    * minor documentation fixes

1.964     2013-11-14 15:45:08 Europe/Amsterdam
    * minor fix to dist.ini to fix github url

1.963     2013-11-13 22:44:29 Europe/Paris

    * Add documentation for the slowlog command PR #44 (rgs)
    * doc fix, duplicate spop PR #48 (nightlord)
    * Redis client is now fork safe PR #51 (songmu)
    * rewrite dist.ini

1.962     2013-10-16T14:58:30Z
    * merge #54 (fix for broken test)
    * Parameter name to new() can be a CodeRef, dynamic connection names
    * admin: added co-maintainer Damien Krotkine <dams@zarb.org>

1.961     2013-01-23T15:09:47Z
    * Add wait_one_response() for better pipeline management

1.960     2013-01-23T11:28:40Z
    * Make the new() name parameter safe to use with all redis-
      server versions

1.959     2013-01-22T14:46:42Z
    * __try_read_sock: test error conditions more thoroughly (issue #31)
    * Improve Test::SpawnRedisServer: multi-server support
    * tidyall the code and docs

1.958     2013-01-15T16:54:40Z
    * Support for name constructor parameter, set connection name
    * Add documentation for CLIENT * commands
    * Improve reliability of Test::SpawnRedisServer

1.957     2013-01-15T13:18:07Z
    * Fix minimum Perl version

1.956     2013-01-15T10:35:10Z
    * Add on_connect callback to Redis constructor (issue 28)
    * Make sure quit() doesn't die when the socket is already dead (issue 30);
    * Switch to Digest::SHA, one less non-core dep RT#81841
    * Try and make Travis-CI more useful, ask for a redis-server